<resources>

  <!-- Internal preferences key for displaying the build version -->
  <string name="build_version_key" translatable="false">build_version</string>

  <!-- Label shown in the About Phone screen for the build version [CHAR LIMIT=40]-->
  <string name="build_version_label">Build version</string>

  <!-- Internal preferences key for displaying the open source license
       libraries -->
  <string name="open_source_licenses_key" translatable="false">open_source_licenses</string>

  <!-- Detail label text shown on the About Phone screen to supplement 
       @string/licenseActivityLabel -->
  <string name="open_source_license_detail_label">License details for open source software</string>

  <!-- Title for the activity that displays licenses for open source libraries used in the
       application. -->
  <string name="licenseActivityLabel">Open source licenses</string>

  <!-- Internal preferences key for displaying the privacy policy -->
  <string name="privacy_policy_key" translatable="false">privacy_policy</string>

  <!-- Label shown on the About Phone screen for the privacy policy option [CHAR LIMIT=40]-->
  <string name="privacy_policy_label">Privacy policy</string>

  <!-- URL for privacy policy -->
  <string name="privacy_policy_url" translatable="false">http://www.google.com/policies/privacy</string>

  <!-- Label shown on the About Phone screen for the terms of service option [CHAR LIMIT=50]-->
  <string name="terms_of_service_label">Terms of service</string>

  <!-- Internal preferences key for displaying the terms of service-->
  <string name="terms_of_service_key" translatable="false">terms_of_service</string>

  <!-- URL for terms of service -->
  <string name="terms_of_service_url" translatable="false">http://www.google.com/policies/terms</string>

</resources>
