<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <Preference
    android:key="@string/build_version_key"
    android:persistent="false"
    android:title="@string/build_version_label"/>

  <Preference
    android:key="@string/open_source_licenses_key"
    android:persistent="false"
    android:summary="@string/open_source_license_detail_label"
    android:title="@string/licenseActivityLabel">
  </Preference>

  <Preference
    android:key="@string/privacy_policy_key"
    android:persistent="false"
    android:title="@string/privacy_policy_label">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="@string/privacy_policy_url"/>
  </Preference>

  <Preference
    android:key="@string/terms_of_service_key"
    android:persistent="false"
    android:title="@string/terms_of_service_label">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="@string/terms_of_service_url"/>
  </Preference>
</PreferenceScreen>
